# RAG

./: .env.models  .gitignore  01_data_extract.ipynb  02_embed_vector.ipynb  03_naive_rag.ipynb  04_adv_rag.ipynb  05_graph_builder.ipynb  06_omni_tools.ipynb  07_web_scout.ipynb  08_graph_mri.ipynb  09_*brain.ipynb  09_brain.ipynb  10_visualizer.ipynb  README.md  api.py  api_calls.txt  config.py  graph.py  info.txt  llm_client.py  nodes.py  plan.txt  portfolio.txt  prompts.py  pyproject.toml  rag_engine.py  rag_evaluation.py  requirements.txt  services.py  state.py  test.ipynb  test_models.py  todo.txt  tracing.py  web_engine.py
final_results/: Imp_adv_rag.csv  Imp_adv_rag_judged.csv  Imp_naive_rag.csv  Imp_naive_rag_judged.csv  NI_adv_rag.csv  NI_adv_rag_judged.csv  NI_naive_rag.csv  NI_naive_rag_judged.csv  adv_rag_judged.csv  naive_rag_judged.csv
judged/: re_evaluated_results_20251221_111908.csv  re_evaluated_results_20251221_112553.csv  re_evaluated_results_20251221_113235.csv  re_evaluated_results_20251221_113834.csv  re_evaluated_results_20251222_090259.csv  re_evaluated_results_20251222_091736.csv  re_evaluated_results_20251222_092623.csv  re_evaluated_results_20251222_093232.csv  re_evaluated_results_20251223_091208.csv  re_evaluated_results_20251223_091701.csv  re_evaluated_results_20251223_093138.csv  re_evaluated_results_20251223_093720.csv  re_evaluated_results_20251224_091147.csv  re_evaluated_results_20251224_091733.csv  re_evaluated_results_20251224_092322.csv  re_evaluated_results_20251224_093441.csv  re_evaluated_results_20251225_091551.csv  (+3 more)
(+1 files in other folders)
